kubernetes/rayscale-lb.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: controller
  labels:
    app: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
  template:
    metadata:
      labels:
        app: controller
    spec:
      containers:
      - name: controller-pods
        image: bencuk/rayscale-controller:1.4.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: tracer
  labels:
    app: tracer
spec:
  replicas: 6
  selector:
    matchLabels:
      app: tracer
  template:
    metadata:
      labels:
        app: tracer
    spec:
      #nodeSelector:
      #  agentpool: compute    
      containers:
      - name: tracer-pods
        image: bencuk/rayscale-tracer:1.4.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8500
---

kind: Service
apiVersion: v1
metadata:
  name: controller-api
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
  selector:
    app: controller

---

kind: Service
apiVersion: v1
metadata:
  name: controller-ui
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9000
  selector:
    app: controller
