kubernetes/rayscale-ingress.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: controller
  labels:
    app: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
  template:
    metadata:
      labels:
        app: controller
    spec:
      containers:
        - name: controller-pods
          image: ghcr.io/benc-uk/rayscale/controller:dev #bencuk/rayscale-controller:1.4.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tracer
  labels:
    app: tracer
spec:
  replicas: 32
  selector:
    matchLabels:
      app: tracer
  template:
    metadata:
      labels:
        app: tracer
    spec:
      nodeSelector:
        agentpool: raytracer
      containers:
        - name: tracer-pods
          image: ghcr.io/benc-uk/rayscale/tracer:dev #bencuk/rayscale-tracer:1.4.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8500
---
kind: Service
apiVersion: v1
metadata:
  name: controller-api
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: controller

---
kind: Service
apiVersion: v1
metadata:
  name: controller-ui
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  selector:
    app: controller

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: controller-ui
spec:
  tls:
    - hosts:
        - rayscale.kube.benco.io
      secretName: kube-benco-io-cert
  rules:
    - host: rayscale.kube.benco.io
      http:
        paths:
          - path: /
            backend:
              serviceName: controller-ui
              servicePort: 80
